--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
  </section>
  <section>
  <body class="padding-border">
- <main class="grad">
+  <main class="grad">
     <h2>Visionary</h2>
   <div class="lightbulb">
    <a href="https://lh3.googleusercontent.com/ypPh3n-A7osAO4ztf--X3Xjq0OFrXA6tCTU1QtvjCOoz3RDfDSqQgqOfIN5Zmf0MARpy3bRcSOOUL8rZenM1Pr7att3SVQoXIvG46t78lYj55SAwLv6Rn-wWPvxjtXGDqxIQJewmLg=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/ypPh3n-A7osAO4ztf--X3Xjq0OFrXA6tCTU1QtvjCOoz3RDfDSqQgqOfIN5Zmf0MARpy3bRcSOOUL8rZenM1Pr7att3SVQoXIvG46t78lYj55SAwLv6Rn-wWPvxjtXGDqxIQJewmLg=w600-h315-p-k" /> </a>
@@ -86,7 +86,6 @@
 </div>
 </div>
  </main>
- </section>
  <section>
  <footer  style="font-family:cursive; background-color: rgb(0, 0, 0);">
  <a href="#top">Back to Top &raquo;</a>
@@ -110,21 +109,22 @@
 <nav>
 <h3 style="color: #FFFFFF;">Call us at:</h3>
 <h3 style="color: #FFFFFF;">(800) 501-8205</h3>
-<section>
+ </section>
+ <section>
   <h3 style="color: #FFFFFF;">Follow us on:</h3>
  <p>
-<div>
-<a href="https://twitter.com/BenevolentWoma1">Twitter</a> 
-  </div>
-<div>
-<a href="https://www.facebook.com/BenevolentWoman/">Facebook</a> 
-  </div>
-<div>
-<a href="https://www.youtube.com/channel/UCdbi1ggKcA6Md48EyDorKdg/">YouTube</a> 
-  </div>
-<div>
-<a href="https://www.instagram.com/womanbenevolent/">Instagram</a>
-  </div>
+<ul>
+ <li><a href="https://twitter.com/BenevolentWoma1">Twitter</a></li>
+  </ul>
+<ul>
+ <li><a href="https://www.facebook.com/BenevolentWoman/">Facebook</a></li> 
+  </ul>
+<ul>
+ <li><a href="https://www.youtube.com/channel/UCdbi1ggKcA6Md48EyDorKdg/">YouTube</a></li> 
+  </ul>
+<ul>
+ <li><a href="https://www.instagram.com/womanbenevolent/">Instagram</a></li>
+  </ul>
   </p>
 </nav>
 </section>
@@ -132,21 +132,21 @@
 <nav>
 <h3 style="color: #FFFFFF;">Services &amp; Products:</h3>
 <p style="color: #rgb(30, 132, 127);">
- <div>
- <a href="https://meetings.hubspot.com/benevolentwoman1">Schedule a Session</a>
-  </div>
-  <div>
-  <a href="#schedule a retreat">Schedule a Retreat</a>
-  </div> 
-  <div>
-  <a href="#apparel">Apparel</a> 
-  </div>
+ <ul>
+ <li><a href="https://meetings.hubspot.com/benevolentwoman1">Schedule a Session</a></li>
+  </ul>
+  <ul>
+   <li><a href="#schedule a retreat">Schedule a Retreat</a></li>
+  </ul> 
+  <ul>
+   <li><a href="#apparel">Apparel</a></li> 
+  </ul>
     </p>
   </nav>
   </section>
    <section>
    <h3 style="color: rgb(30, 132, 127);">&copy;2020 Benevolent Woman</h3> 
-   </section> 
-    </footer>
- </div>
+   </footer>
+ </section>
 </body>
+</section>
