--- a/index.html
+++ b/index.html
@@ -46,43 +46,64 @@
  </section>
  <section>
  <body class="padding-border">
-  <main class="grad">
+  <div>
+  <main>
     <h2>Visionary</h2>
+   </div>
   <div class="lightbulb">
    <a href="https://lh3.googleusercontent.com/ypPh3n-A7osAO4ztf--X3Xjq0OFrXA6tCTU1QtvjCOoz3RDfDSqQgqOfIN5Zmf0MARpy3bRcSOOUL8rZenM1Pr7att3SVQoXIvG46t78lYj55SAwLv6Rn-wWPvxjtXGDqxIQJewmLg=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/ypPh3n-A7osAO4ztf--X3Xjq0OFrXA6tCTU1QtvjCOoz3RDfDSqQgqOfIN5Zmf0MARpy3bRcSOOUL8rZenM1Pr7att3SVQoXIvG46t78lYj55SAwLv6Rn-wWPvxjtXGDqxIQJewmLg=w600-h315-p-k" /> </a>
    </div>
-    <p>I will praise thee; for I am fearfully and wonderfully made: marvellous are thy works; and that my soul knoweth right well.</p></section>
-<section>
+   <div>
+   <p>I will praise thee; for I am fearfully and wonderfully made: marvellous are thy works; and that my soul knoweth right well.</p></section>
+  </div>
+   <section>
+    <div>
   <a href="#top">Back to Top &raquo;</a>
-  <h2>Wisdom</h2>
- <div class="library">
+    </div>
+     <div>
+    <h2>Wisdom</h2>
+    </div>
+      <div class="library">
  <a href="https://lh3.googleusercontent.com/MODt3nrvoIjhF1vERPnL9RMr0TqZmvsquYZo_07kJlgj-E7rhPJ10GnF3IeySOFogF-TjpWfROdnlHKuDTVM3iYlSh9yMqAb2IMvHj_OAzvFyF7gr-FfcFMOTKFTjTyYiyRYITU8sg=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/MODt3nrvoIjhF1vERPnL9RMr0TqZmvsquYZo_07kJlgj-E7rhPJ10GnF3IeySOFogF-TjpWfROdnlHKuDTVM3iYlSh9yMqAb2IMvHj_OAzvFyF7gr-FfcFMOTKFTjTyYiyRYITU8sg=w600-h315-p-k" /> </a>
  </div>
+    <div>
   <p>The robustness of wisdom. The most primal of God's creations. His established foundation. Brought forth by the omnipotent Author that values the eminence of decency and order. <a href="https://meetings.hubspot.com/benevolentwoman1">Schedule a Session.</a></p>
-</section>
+    </div>
+     </section>
  <section>
+  <div>
  <a href="#top">Back to Top &raquo;</a>
- <h2>The Hiding Place</h2>
-  <div class="maldives">
+  </div>
+  <div>
+<h2>The Hiding Place</h2>
+  </div>
+   <div class="maldives">
 <a href="https://lh3.googleusercontent.com/7bQQdq-qQnuOz0JLZxdj0Hph95Xx36wrKus_Cw2gwvqYAcCH-38qLWLPkYFuJXdimeRJ10kOPE5Slev3Nf2yJBR1DaNxdA3OH34xuzZj3PFSU7le8NxUoNA-asw3EZp1ZuXhF6wNfw=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/7bQQdq-qQnuOz0JLZxdj0Hph95Xx36wrKus_Cw2gwvqYAcCH-38qLWLPkYFuJXdimeRJ10kOPE5Slev3Nf2yJBR1DaNxdA3OH34xuzZj3PFSU7le8NxUoNA-asw3EZp1ZuXhF6wNfw=w600-h315-p-k" /> </a> 
   </div>
+  <div>
    <p>Contemplation is godly. Awareness of mind, body, and spirit is a prerequisite to healing. Becoming de-stressed is fundamental to attain a robust measure of living. Let's plan our <a href="#schedule a retreat">sanctum </a>together! </p>
-</section> 
-<section id="about">
-<a href="#top">Back to Top &raquo;</a>
-<h2>About Us</h2>
+  </div>
+   </section> 
 <div>
+  <section id="about">
+<a href="#top">Back to Top &raquo;</a>
+   </div>
+ <div>
+<h2>About Us</h2>
+</div>
  <div class="image-self">
  <a href="https://lh3.googleusercontent.com/QedrO3BDNaQcFa12GvmDXd_RgqCYVNYWvmvAtXC7krlkA2pBxu3hSkiSZZq0ny6vx84FxPHGB5tckttVlnd_RHUKXUWc7whuDuk2BKbI1EESnzwS5O91dwCb6rcfBIVRYUgxCMV4lQ=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/QedrO3BDNaQcFa12GvmDXd_RgqCYVNYWvmvAtXC7krlkA2pBxu3hSkiSZZq0ny6vx84FxPHGB5tckttVlnd_RHUKXUWc7whuDuk2BKbI1EESnzwS5O91dwCb6rcfBIVRYUgxCMV4lQ=w600-h315-p-k" /> </a>
  </div>
- </div>
+ <div>
  <p>We offer full service life coaching sessions. Committed to the spiritual, holistic, and individualized care of every client, man or woman. Our focal points are singles, relationships, and divorce, specializing in self-empowerment with an emphasis on truth. We offer initial free 30 minute consultations.</p> 
-</section>
-<div>
+ </div>
+  </section>
  <div class="apparel">
 <section>
-   <p>Brand owner of "My Blackness Won't Let Me..."<a href="#apparel">Apparel</a>.</p>
-   </section> 
+   <div>
+ <p>Brand owner of "My Blackness Won't Let Me..."<a href="#apparel">Apparel</a>.</p>
+ </div>
+    </section> 
 </div>
 </div>
  </main>
