--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- Head of the page -->
 <head> 
 <section>
  <div id="main-heading">
@@ -8,7 +9,6 @@
    </header>
  </div>
  </section>
-</head>
    <section>
   <div>
   <div>
@@ -21,7 +21,8 @@
     </div>
  </section>
  <section>
- <div>
+ <!-- Header Links -->
+  <div>
  <nav style="font-family: cursive;">
   <div>
    <a href="#home">Home</a>
@@ -44,7 +45,8 @@
     </nav>
  </div>
  </section>
- <section>
+  </head>
+ <!-- Body of the page -->
  <body class="padding-border">
   <div>
   <main>
@@ -113,7 +115,8 @@
  <section class="contact">
 <h3 style="color: #FFFFFF;">Email us at:</h3>
  </section>
- <section>
+ <!-- Footer Links -->
+  <section>
   <nav>
 <ul>
 <li><a href="mailto:customerservice@benevolentwoman.com">customerservice@benevolentwoman.com</a></li>
