--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
  <!-- Body of the page -->
  <body class="padding-border">
   <div>
-  <main>
+  <main style="text-align: center; font-family: cursive, righteous; font-weight: bold; text-color: #000; background-color: rgba(124, 252, 0, 0.5);">
     <h2>Visionary</h2>
    </div>
   <div class="lightbulb">
