--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
    <p>I will praise thee; for I am fearfully and wonderfully made: marvellous are thy works; and that my soul knoweth right well.</p>
   </div>
    <section>
-    <div class="top">
+    <div>
   <a href="#top">Back to Top &raquo;</a>
     </div>
      <div>
@@ -73,7 +73,7 @@
     </div>
      </section>
  <section>
-  <div class="top">
+  <div>
  <a href="#top">Back to Top &raquo;</a>
   </div>
   <div>
@@ -86,7 +86,7 @@
    <p>Contemplation is godly. Awareness of mind, body, and spirit is a prerequisite to healing. Becoming de-stressed is fundamental to attain a robust measure of living. Let's plan our <a href="#schedule a retreat">sanctum </a>together! </p>
   </div>
    </section> 
-<div class="top">
+<div>
   <section id="about">
 <a href="#top">Back to Top &raquo;</a>
    </div>
