--- a/index.html
+++ b/index.html
@@ -167,7 +167,21 @@
   </ul>
     </p>
   </nav>
+  <section>
+  <body>
+  <script
+    src="https://www.paypal.com/sdk/js?client-id=SB_CLIENT_ID"> // Required. Replace SB_CLIENT_ID with your sandbox client ID.
+  </script>
+
+  <div id="paypal-button-container"></div>
+
+  <script>
+    paypal.Buttons().render('#paypal-button-container');
+    // This function displays Smart Payment Buttons on your web page.
+  </script>
+</body>
   </section>
+ </section>
    <section>
    <h3 style="color: rgb(30, 132, 127);">&copy;2020 Benevolent Woman</h3> 
    </footer>
