--- a/index.html
+++ b/index.html
@@ -169,6 +169,8 @@
   </nav>
  </section>
  <section>
+  <!-- Update the JavaScript SDK with buttons and funding eligibility -->
+<script src="https://www.paypal.com/sdk/js?client-id=sb&components=buttons,funding-eligibility"></script>
 var FUNDING_SOURCES = [
     paypal.FUNDING.PAYPAL,
     paypal.FUNDING.VENMO,
