--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
-<!DOCTYPE html>
-
-<head>
+<div>
   <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- Ensures optimal rendering on mobile devices. -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge" /> <!-- Optimal Internet Explorer compatibility -->
-</head>
+</div>
 
-<body>
+<div>
   <script
     src="https://www.paypal.com/sdk/js?client-id=AbcKUIw7V4HBNbbiB2cp_NETliiriRwLWxkS5J0lw8A96xNofVMSvtwGhTBl1DIOLgBNGUxaxM1Te2Nx"> // Required. Replace SB_CLIENT_ID with your sandbox client ID.
   </script>
-</body>
+</div>
 <!-- Head of the page -->
 <head> 
 <section>
