--- a/index.html
+++ b/index.html
@@ -1,13 +1,3 @@
-
-  <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- Ensures optimal rendering on mobile devices. -->
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" /> <!-- Optimal Internet Explorer compatibility -->
-
-
-
-  <script
-    src="https://www.paypal.com/sdk/js?client-id=AbcKUIw7V4HBNbbiB2cp_NETliiriRwLWxkS5J0lw8A96xNofVMSvtwGhTBl1DIOLgBNGUxaxM1Te2Nx"> // Required. Replace SB_CLIENT_ID with your sandbox client ID.
-  </script>
-
 <!-- Head of the page -->
 <head> 
 <section>
@@ -178,6 +168,20 @@
     </p>
   </nav>
  </section>
+  <section>
+ <body>
+  <script
+    src="https://www.paypal.com/sdk/js?client-id=SB_CLIENT_ID"> // Required. Replace SB_CLIENT_ID with your sandbox client ID.
+  </script>
+
+  <div id="paypal-button-container"></div>
+
+  <script>
+    paypal.Buttons().render('#paypal-button-container');
+    // This function displays Smart Payment Buttons on your web page.
+  </script>
+</body>
+  </section>
    <section>
    <h3 style="color: rgb(30, 132, 127);">&copy;2020 Benevolent Woman</h3> 
    </footer>
