--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
  <div class="apparel">
 <section>
    <div>
- <p>Brand owner of "My Blackness Won't Let Me..."<a href="#apparel">Apparel</a>.</p>
+ <p> Owner of "My Blackness Won't Let Me..."<a href="#apparel">Apparel</a>.</p>
  </div>
     </section> 
 </div>
