--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
    <a href="#schedule a retreat">Schedule a Retreat</a>
    </div>
    <div>
-   <a href="https://meetings.hubspot.com/benevolentwoman1">Schedule a Session</a>
+   <a href="https://mymentor.life/valenciasuggs">Schedule a Session</a>
    </div>
     </nav>
  </div>
