--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
  <a href="https://lh3.googleusercontent.com/MODt3nrvoIjhF1vERPnL9RMr0TqZmvsquYZo_07kJlgj-E7rhPJ10GnF3IeySOFogF-TjpWfROdnlHKuDTVM3iYlSh9yMqAb2IMvHj_OAzvFyF7gr-FfcFMOTKFTjTyYiyRYITU8sg=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/MODt3nrvoIjhF1vERPnL9RMr0TqZmvsquYZo_07kJlgj-E7rhPJ10GnF3IeySOFogF-TjpWfROdnlHKuDTVM3iYlSh9yMqAb2IMvHj_OAzvFyF7gr-FfcFMOTKFTjTyYiyRYITU8sg=w600-h315-p-k" /> </a>
  </div>
     <div>
-  <p>The robustness of wisdom. The most primal of God's creations. His established foundation. Brought forth by the omnipotent Author that values the eminence of decency and order. <a href="https://meetings.hubspot.com/benevolentwoman1">Schedule a Session.</a></p>
+  <p>The robustness of wisdom. The most primal of God's creations. His established foundation. Brought forth by the omnipotent Author that values the eminence of decency and order. <a href="https://mymentor.life/valenciasuggs">Schedule a Session.</a></p>
     </div>
      </section>
  <section>
@@ -157,7 +157,7 @@
 <h3 style="color: #FFFFFF;">Services &amp; Products:</h3>
 <p style="color: #rgb(30, 132, 127);">
  <ul>
- <li><a href="https://meetings.hubspot.com/benevolentwoman1">Schedule a Session</a></li>
+ <li><a href="https://mymentor.life/valenciasuggs">Schedule a Session</a></li>
   </ul>
   <ul>
    <li><a href="#schedule a retreat">Schedule a Retreat</a></li>
