--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
    <a href="https://lh3.googleusercontent.com/ypPh3n-A7osAO4ztf--X3Xjq0OFrXA6tCTU1QtvjCOoz3RDfDSqQgqOfIN5Zmf0MARpy3bRcSOOUL8rZenM1Pr7att3SVQoXIvG46t78lYj55SAwLv6Rn-wWPvxjtXGDqxIQJewmLg=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/ypPh3n-A7osAO4ztf--X3Xjq0OFrXA6tCTU1QtvjCOoz3RDfDSqQgqOfIN5Zmf0MARpy3bRcSOOUL8rZenM1Pr7att3SVQoXIvG46t78lYj55SAwLv6Rn-wWPvxjtXGDqxIQJewmLg=w600-h315-p-k" /> </a>
    </div>
    <div>
-   <p>I will praise thee; for I am fearfully and wonderfully made: marvellous are thy works; and that my soul knoweth right well.</p>
+   <p>I will go before thee and make the crooked places straight: I will break in pieces the gates of brass, and cut in sunder the bars of iron: And I will give thee the treasures of darkness, and hidden riches of secret places, that thou mayest know that I, the LORD, which call thee by thy name, am the God of Israel.</p>
   </div>
    <section>
     <div>
