--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   </head>
  <!-- Body of the page -->
  <body class="padding-border">
-   <main style="text-align: center; font-family: cursive, righteous; font-weight: bold; text-color: #000; background-color:rgba(255,0,200,0.5);">
+   <main style="text-align: center; font-family: cursive, righteous; font-weight: bold; text-color: #000;">
     <div>
     <h2>Visionary</h2>
    </div>
