--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
  <section>
  <footer  style="font-family:cursive; background-color: rgb(0, 0, 0);">
  <a href="#top">Back to Top &raquo;</a>
- <left>
+ <center>
 <a href="https://lh3.googleusercontent.com/aIh5TfbX81fc_vkajxoQrGe9lMUMgayKq3YTojpLuys6dnONBpTw0hsXU5FT6B5DDPo4HOvndimAVg1X-UhbESTmpdom_IuxUe60sCLaQYQsmJ-wtfhJ7h7DGhcfKIoL7-PqFkQ=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/aIh5TfbX81fc_vkajxoQrGe9lMUMgayKq3YTojpLuys6dnONBpTw0hsXU5FT6B5DDPo4HOvndimAVg1X-UhbESTmpdom_IuxUe60sCLaQYQsmJ-wtfhJ7h7DGhcfKIoOxiL7-PqFkQ=w600-h315-p-k" /> </a>
-  </left>
+  </center>
   <section class="contact">
 <h3 style="color: #FFFFFF;">Email us at:</h3>
  </section>
