--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
  <!-- Header Links -->
   <section>
    <div>
- <nav style="font-family: cursive; display: inline;">
+ <nav style="font-family: cursive;">
   <div>
    <a href="#home">Home</a>
   </div>
