--- a/index.html
+++ b/index.html
@@ -25,19 +25,21 @@
    <div class="header nav">
  <nav style="font-family: cursive;">
   <div>
-   <a href="#home">Home</a>
+   <ul>
+    <li><a href="#home">Home</a></li>
   </div>
   <div>
-   <a href="#about">About</a>
+   <li><a href="#about">About</a></li>
    </div>
    <div>
-   <a href="#contact">Contact</a>
+    <li><a href="#contact">Contact</a></li>
    </div>
    <div>
-   <a href="#apparel">Apparel</a> 
+    <li><a href="#apparel">Apparel</a></li> 
    </div>
    <div>
-   <a href="#schedule a retreat">Schedule a Retreat</a>
+    <li><a href="#schedule a retreat">Schedule a Retreat</a></li>
+   </ul>
    </div>
    <div>
    <a href="https://mymentor.life/valenciasuggs">Schedule a Session</a>
