--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
  <nav style="font-family: cursive;">
   <div>
    <ul>
-    <li><a href="#home">Home</a></li>
+   <a href="#home">Home</a>
   </div>
   <div>
-   <li><a href="#about">About</a></li>
+  <a href="#about">About</a>
    </div>
    <div>
-    <li><a href="#contact">Contact</a></li>
+  <a href="#contact">Contact</a>
    </div>
    <div>
-    <li><a href="#apparel">Apparel</a></li> 
+  <a href="#apparel">Apparel</a>
    </div>
    <div>
-    <li><a href="#schedule a retreat">Schedule a Retreat</a></li>
+  <a href="#schedule a retreat">Schedule a Retreat</a>
    </ul>
    </div>
    <div>
