--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
  </section>
  <!-- Header Links -->
   <section>
-   <div class="header nav">
+   <div class="nav">
  <nav style="font-family: cursive;">
   <div>
    <ul>
